--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "03---bases-node",
   "version": "0.0.2",
-  "description": "Tabla de multiplicar con archivo de texto",
+  "description": "Multiplication table generator ",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
